dataset1235/2025-2/805158916/users/2847101731/executions/2651470117_2383239197.log
== SUBMISSION (2025-08-27 04:06:31)
-- CODE: 
import math
a= float(input("aa"))
b= float(input("bb"))
c= float(input("cc"))

rad= math.radians(c)

d=(math.sqrt(a**2+b**2-2*a*b*math.cos(rad)))
print(round(d,2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
aabbcc87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
aabbcc16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
aabbcc17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
aabbcc1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
aabbcc54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
aabbcc9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:08:43)
-- CODE: 
from math import *
a=float(input("digite a distancia ate a primeira arvore(a): "))
b=float(input("digite a distancia ate a primeira arvore(b): "))
gamma_graus=float(input("digite o angulo entre elas (y em graus"))
gamma_radianos=math.radians(gamma_graus)
c=math.sqrt(a** 2 + b ** 2 - 2 * a * b * math.cos (gamma_radianos))
print(f"a distancia entre as arvores e: {c:.2f}")





































































































































































































































































































-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    gamma_radianos=math.radians(gamma_graus)
                   ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    gamma_radianos=math.radians(gamma_graus)
                   ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    gamma_radianos=math.radians(gamma_graus)
                   ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    gamma_radianos=math.radians(gamma_graus)
                   ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    gamma_radianos=math.radians(gamma_graus)
                   ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    gamma_radianos=math.radians(gamma_graus)
                   ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
